# 3d_print

./: README.md  package-lock.json  package.json
.github/: copilot-instructions.md
app/entities/model/: types.ts
app/entities/settings/: types.ts
app/features/ams/: AMSManager.ts
app/features/estimate/: useEstimation.ts
app/features/orca-viewer/: README.md  implementation-prompt.md  quick-prompt.md  types.ts
app/features/plate-viewer/: PlateViewer.tsx  usePlateViewer.ts
app/features/preview/: use3DPreview.ts  useNewOnline3DViewer.ts  useOnline3DViewer.ts
app/features/settings/: SettingsManager.ts
app/features/uploader/: useFileUploader.ts
app/routes/: _index.tsx  plate-viewer.tsx
app/shared/api/: slicer.ts
app/shared/config/: bambulab-settings.json
app/shared/lib/: 3mf-parser.ts  js-slicer.ts  store.ts  wasm-slicer.ts
app/shared/types/: plate.ts
app/widgets/estimation-card/: EstimationCard.tsx
app/widgets/layout/: Card.tsx  Container.tsx  FeaturesSection.tsx  Footer.tsx  Grid.tsx  Header.tsx  HeroSection.tsx  MainContent.tsx  WorkflowSection.tsx  index.ts
app/widgets/model-color-panel/: ModelColorPanel.tsx
app/widgets/model-settings-3mf/: ModelSettings3MF.tsx
app/widgets/model-stats-panel/: ModelStatsPanel.tsx
app/widgets/model-viewer/: ModelViewer.tsx
app/widgets/online-3d-viewer/: Online3DViewer.tsx
app/widgets/plate-viewer/: PlateViewerWidget.tsx
app/widgets/slicer-settings/: SlicerSettings.tsx
docs/: PLATE_VIEWER_ARCHITECTURE.md
wasm/: CMakeLists.txt  build.bat  build.sh
wasm/src/: slicer.cpp
(+12 files in other folders)
